# godot-rustext-web-threads-issue

./: .gitignore  Makefile  README.md  flake.nix
canary-no-wasm-godot/: export_presets.cfg  icon.svg.import  main.gd  node_2d.tscn  project.godot
gdext_godot/: export_presets.cfg  gdext_godot.gdextension  icon.svg.import  main.gd  node_2d.tscn  project.godot
gdext_lib/: Cargo.toml
gdext_lib/src/: fib.rs  fib_godot.rs  gdext_test.rs  lib.rs
godot_4_2/: export_presets.cfg  icon.svg.import  main.gd  node_2d.tscn  project.godot
using-signals-godot/: export_presets.cfg  icon.svg.import  main.gd  main_minimal_prototype.gd.bu  node_2d.tscn  project.godot  rust_godot.gdextension  test_node.gd
using-signals-rust/: Cargo.toml
using-signals-rust/src/: lib.rs
